Fixed some formatting on Firefox

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,11 +20,12 @@ section, summary, time, mark, audio, video {
 	vertical-align: baseline;
 
 }
-
 video {
-	height: 100%;
-	width: 100%;
+	height: 80%;
+	width: 80%;
+	display: block;
   }
+
 html {
     overflow: scroll;
     overflow-x: hidden;
